[package]
authors = ["Bholdus <https://github.com/bholdus>"]
description = "Real world decentralized finance."
edition = "2021"
homepage = "https://bholdus.com"
name = "bholdus-service"
repository = "https://github.com/bholdus/bholdus-chain/"
version = "1.0.22"

[dependencies]
structopt = "0.3.8"
rand = "0.8.4"
log = "0.4.17"
async-trait = { version = "0.1.48" }
futures = { version = "0.3.9", features = ["compat"] }
hex-literal = "0.3.1"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.68"
codec = { package = "parity-scale-codec", version = "3.0.0" }
tokio = { version = "1.13.0", features = ["macros", "sync"] }
jsonrpsee = { version = "0.14.0", features = ["server"] }

beefy-gadget = { git = "https://github.com/BHONetwork/substrate", branch = "bho-polkadot-v0.9.26" }
beefy-gadget-rpc = { git = "https://github.com/BHONetwork/substrate", branch = "bho-polkadot-v0.9.26" }
beefy-primitives = { git = "https://github.com/BHONetwork/substrate", branch = "bho-polkadot-v0.9.26" }

frame-benchmarking = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
frame-system = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
pallet-transaction-payment = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
substrate-frame-rpc-system = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
pallet-transaction-payment-rpc = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
pallet-im-online = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
pallet-contracts-rpc = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
pallet-mmr-rpc = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }

sc-basic-authorship = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-cli = { features = [
    "wasmtime",
], git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-client-api = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-consensus = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-executor = { features = [
    "wasmtime",
], git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-consensus-aura = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-consensus-manual-seal = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26", optional = true }
sc-consensus-uncles = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-consensus-epochs = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-consensus-slots = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-finality-grandpa = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-finality-grandpa-rpc = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-keystore = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-rpc = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-rpc-api = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-service = { features = [
    "wasmtime",
], git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-telemetry = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-transaction-pool = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-transaction-pool-api = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-network = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-authority-discovery = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sc-chain-spec = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }

sp-api = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-trie = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-block-builder = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
frame-system-rpc-runtime-api = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-blockchain = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-consensus = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-consensus-aura = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-core = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-finality-grandpa = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-inherents = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-runtime = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-timestamp = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-authorship = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-transaction-pool = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-keystore = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-offchain = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-session = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-storage = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }
sp-authority-discovery = { git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.26" }

fc-mapping-sync = { version = "2.0.0-dev", git = "https://github.com/BHONetwork/frontier.git", branch = "bho-polkadot-v0.9.26" }
fc-db = { version = "2.0.0-dev", git = "https://github.com/BHONetwork/frontier.git", branch = "bho-polkadot-v0.9.26" }
fc-rpc-core = { git = "https://github.com/BHONetwork/frontier.git", branch = "bho-polkadot-v0.9.26" }
fc-rpc = { git = "https://github.com/BHONetwork/frontier.git", branch = "bho-polkadot-v0.9.26" }
fp-rpc = { version = "3.0.0-dev", git = "https://github.com/BHONetwork/frontier.git", branch = "bho-polkadot-v0.9.26" }
fp-storage = { git = "https://github.com/BHONetwork/frontier.git", branch = "bho-polkadot-v0.9.26" }
pallet-ethereum = { git = "https://github.com/BHONetwork/frontier.git", branch = "bho-polkadot-v0.9.26" }
# bholdus-evm-rpc-debug = { path = "../../client/evm/rpc/debug" }
# bholdus-evm-rpc-primitives-debug = { path = "../../primitives/evm/rpc/debug" }
# bholdus-evm-rpc-trace = { path = "../../client/evm/rpc/trace" }
bholdus-evm-primitives-ext = { path = "../../primitives/evm/ext" }

ulas-runtime = { optional = true, path = "../../runtime/ulas" }
phoenix-runtime = { optional = true, path = "../../runtime/phoenix" }
hyper-runtime = { optional = true, path = "../../runtime/hyper" }
common-primitives = { path = "../../primitives/common" }

[features]
default = ["std"]
std = []
runtime-benchmarks = [
    "ulas-runtime/runtime-benchmarks",
    "phoenix-runtime/runtime-benchmarks",
]
try-runtime = ["ulas-runtime/try-runtime", "phoenix-runtime/try-runtime"]

with-ulas-runtime = ["ulas-runtime"]
with-phoenix-runtime = ["phoenix-runtime"]
with-all-runtime = ["with-ulas-runtime", "with-phoenix-runtime"]

with-hyper-runtime = ["hyper-runtime", "manual-seal"]
manual-seal = [
    "sc-consensus-manual-seal",
]