[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'bholdus-chainbridge-transfer'
readme = 'README.md'
repository = 'https://github.com/bholdus/bholdus-chain/'
version = '4.0.0-dev'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# external dependencies

[dependencies.codec]
default-features = false
features = ['derive', 'max-encoded-len']
package = 'parity-scale-codec'
version = '2.2.0'

# Substrate dependencies
[dependencies.frame-benchmarking]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'
optional = true

[dependencies.frame-support]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'

[dependencies.frame-system]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-core]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'

[dependencies.sp-runtime]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'

[dependencies.sp-std]
version = "4.0.0-dev"
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'

# local dependencies

[dependencies.bholdus-chainbridge]
version = "4.0.0-dev"
default-features = false
path = '../chainbridge'

[dependencies.bholdus-support]
version = "4.0.0-dev"
default-features = false
path = '../support'

[dependencies.bholdus-primitives]
version = "4.0.0-dev"
default-features = false
path = '../../primitives'

[dev-dependencies.serde]
version = '1.0.119'

[dev-dependencies.sp-io]
version = '4.0.0-dev'
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'

[dev-dependencies.hex-literal]
version = '0.3.3'

[dev-dependencies.pallet-balances]
version = '4.0.0-dev'
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'

[dev-dependencies.bholdus-tokens]
version = '4.0.0-dev'
path = '../tokens'

[dev-dependencies.bholdus-currencies]
version = '4.0.0-dev'
path = '../currencies'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	'sp-runtime/std',
	'bholdus-chainbridge/std',
	'bholdus-support/std',
	'bholdus-primitives/std',

]
try-runtime = ['frame-support/try-runtime']
